# ENGA74-TrabalhoFinal

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  optimization.ipynb  prelim.ipynb  prototype.ipynb  pyproject.toml
data/: Florida NREL 2023.csv  Natal_2020.csv  Natal_2021.csv  Natal_2022.csv  Natal_2023.csv  Natal_2024.csv
